--- a/myaccount.html
+++ b/myaccount.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Petshop</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
