--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style type='text/css'>body, a:hover {cursor: url(http://www.zingerbugimages.com/cursors/puppy1tan.ani), url(http://www.zingerbug.com/cursors/cursors/puppy1tan.gif), progress !important;}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
