leave some message

--- a/petfinder.html
+++ b/petfinder.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <title>Petshop</title>
+    
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -26,10 +27,10 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active" >
-        <img src="./img/c1.jpg" alt="homepic1" width="100%" height="600">
+        <img src="./img/adoption-101.jpg" alt="homepic1" width="100%" height="600">
       </div>
       <div class="carousel-item">
-        <img src="./img/hori1.jpg" alt="homepic2" width="100%" height="600">
+        <img src="./img/adopt 102.jpg" alt="homepic2" width="100%" height="600">
       </div>
       <div class="carousel-item">
         <img src="./img/fish hori2.jpg" alt="homepic3" width="100%" height="600">
