--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="imgs/My Post (14).png">
     <title>Petshop</title>
+    <link rel="icon" type="image/x-icon" href="./img/scoobydoo.jfif" />
 </head>
 <body>
   
