--- a/myaccount.html
+++ b/myaccount.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <title>Petshop</title>
+    <link rel="icon" type="image/x-icon" href="./img/scoobydoo.jfif" />
     <link rel="stylesheet" href="style.css">
     
 </head>
